--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "snakepit-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://coderdrew62.github.io/snakepit",
   "dependencies": {
     "@supabase/supabase-js": "^2.49.8",
     "@testing-library/dom": "^10.4.0",
@@ -23,9 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -44,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.3.0"
   }
 }
