Multiplayer support first upload of stable release

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
+    "lucide-react": "^0.512.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
@@ -19,11 +20,23 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "nodemon": "^3.1.10",
+    "socket.io": "^4.8.1"
+  },
   "scripts": {
     "start": "react-scripts start",
+    "start-lan": "set HOST=0.0.0.0&& react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "nodemon server/index.js",
+    "dev": "concurrently \"npm run server\" \"npm start\"",
+    "dev-lan": "concurrently \"npm run server\" \"npm run start-lan\"",
+    "install-server": "npm install express socket.io cors nodemon concurrently"
   },
   "eslintConfig": {
     "extends": [
